Implement metadata change listener